log
Thu 04 May 2023 04:09:49 AM UTC: 
 tests:  0|5
total_score: 0/70
c3b16a0
Thu 04 May 2023 02:03:50 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:14: error: expected ‘(’ before ‘n’
   61 |           if n->sudo[i][j] == 0{
      |              ^
      |              (
sudoku.c:61:24: error: statement with no effect [-Werror=unused-value]
   61 |           if n->sudo[i][j] == 0{
      |              ~~~~~~~~~~^~~
sudoku.c:55:7: error: unused variable ‘cont’ [-Werror=unused-variable]
   55 |   int cont = 1;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ce8229b
Thu 04 May 2023 02:04:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:30: error: expected expression before ‘==’ token
   61 |           if (n->sudo[i][j]) == 0{
      |                              ^~
sudoku.c:55:7: error: unused variable ‘cont’ [-Werror=unused-variable]
   55 |   int cont = 1;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
de157cf
Thu 04 May 2023 02:04:29 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:34: error: invalid use of incomplete typedef ‘List’
   64 |               if (cont == 1) list->first = n;
      |                                  ^~
Compilation failed
c270522
Thu 04 May 2023 02:05:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:7: error: unused variable ‘cont’ [-Werror=unused-variable]
   55 |   int cont = 1;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ad63ac5
Thu 04 May 2023 02:06:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
519261c
Thu 04 May 2023 02:07:00 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:34: error: invalid use of incomplete typedef ‘List’
   64 |               if (cont == 1) list->first = copy(n);
      |                                  ^~
Compilation failed
ee0129a
